--- a/package.json
+++ b/package.json
@@ -30,24 +30,24 @@
     "@angular-devkit/build-webpack": "^0.1602.0",
     "@angular-devkit/core": "^16.2.0",
     "@angular-devkit/schematics": "^16.2.0",
-    "@angular/animations": "^16.2.1",
-    "@angular/cdk": "^16.2.1",
-    "@angular/common": "^16.2.1",
-    "@angular/compiler": "^16.2.1",
-    "@angular/core": "^16.2.1",
+    "@angular/animations": "^16.2.12",
+    "@angular/cdk": "^16.2.12",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
     "@angular/forms": "^16.2.1",
-    "@angular/material": "^16.2.1",
-    "@angular/platform-browser": "^16.2.1",
-    "@angular/platform-browser-dynamic": "^16.2.1",
-    "core-js": "^3.32.1",
+    "@angular/material": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "core-js": "^3.33.2",
     "reset-css": "^5.0.2",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
-    "webpack": "^5.88.2",
-    "zone.js": "^0.13.1"
+    "webpack": "^5.89.0",
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular-devkit/build-angular": "^16.2.10",
     "@angular-eslint/builder": "16.1.1",
     "@angular-eslint/eslint-plugin": "16.1.1",
     "@angular-eslint/eslint-plugin-template": "16.1.1",
@@ -59,13 +59,13 @@
     "@compodoc/compodoc": "^1.1.21",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.55",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "codelyzer": "^6.0.2",
     "cpx": "1.5.0",
-    "eslint": "^8.39.0",
+    "eslint": "^8.47.0",
     "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-prefer-arrow": "1.2.2",
+    "eslint-plugin-prefer-arrow": "1.2.3",
     "jasmine-core": "^4.6.0",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "~6.4.0",
@@ -73,7 +73,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "ng-packagr": "^16.2.0",
+    "ng-packagr": "^16.2.3",
     "sass-lint": "1.13.1",
     "ts-node": "8.6.2",
     "typescript": "^4.9.5"
