--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -34,6 +34,8 @@ jobs:
       - name: Configure npm
         run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_PACKAGES_TOKEN }}" > .npmrc
 
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - name: Publish
+        uses: JS-DevTools/npm-publish@v3
+        with:
+          package: ./dist/core/package.json
+          token: ${{ secrets.GH_PACKAGES_TOKEN }}
