--- a/src/core/package.json
+++ b/src/core/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@etb-electronic/angular-onscreen-material-keyboard",
   "version": "0.17.0",
-  "description": "This package is forked from ngular-onscreen-material-keyboard to work with angular 15",
+  "description": "This package is forked from angular-onscreen-material-keyboard to work with angular 15",
   "repository": {
     "type": "git",
-    "url": "https://github.com/eFaps/angular-onscreen-material-keyboard.git"
+    "url": "git+https://github.com/M-S-ETB/angular-onscreen-material-keyboard.git"
   },
   "author": "Iris X, Daniel M, Kenneth A",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/eFaps/angular-onscreen-material-keyboard/issues"
+    "url": "https://github.com/M-S-ETB/angular-onscreen-material-keyboard/issues"
   },
-  "homepage": "https://github.com/eFaps/angular-onscreen-material-keyboard",
+  "homepage": "https://github.com/M-S-ETB/angular-onscreen-material-keyboard",
   "publishConfig": {
     "access": "public"
   },
