--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         id: publish
         uses: JS-DevTools/npm-publish@v3
         with:
-          token: ${{ secrets.GH_PACKAGES_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           package: ./dist/core/package.json
           registry: "https://npm.pkg.github.com"
       - name: Create Release
